--- a/app/src/main/res/layout-w600dp/fragment_transform.xml
+++ b/app/src/main/res/layout-w600dp/fragment_transform.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -15,35 +16,51 @@
         />
 
 
-    <ScrollView
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cartview"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
+        android:layout_height="wrap_content"
+        card_view:cardUseCompatPadding="true"
+        app:layout_constraintHeight_max="210dp"
+        app:layout_constraintTop_toBottomOf="@+id/recyclerview_transform"
         app:layout_constraintBottom_toTopOf="@+id/summary">
 
-        <LinearLayout
+        <ImageView
+            android:id="@+id/imageView2"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_gravity="left"
+            android:layout_marginStart="20dp"
+            android:src="@drawable/buy" />
+
+        <ScrollView
+            android:id="@+id/scrollview1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_constraintBottom_toTopOf="@+id/summary"
-            android:orientation="vertical" >
+            android:layout_margin="30dp">
 
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/cart_item_recyclerview"
+<!--            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" />
-        </LinearLayout>
-    </ScrollView>
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                app:layout_constraintBottom_toTopOf="@+id/summary">-->
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/cart_item_recyclerview"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+        </ScrollView>
+    </androidx.cardview.widget.CardView>
 
     <LinearLayout
         android:id="@+id/summary"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:layout_margin="10dp"
+        android:layout_margin="20dp"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintVertical_bias="1.0"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="493dp">
+        >
 
         <TextView
             android:id="@+id/textView4"
@@ -52,22 +69,23 @@
             android:layout_marginEnd="20dp"
             android:gravity="center_vertical"
             android:textSize="20sp"
-            android:text="합계 금액 : " />
+            android:textStyle="bold"
+            android:text="결제 할 금액 : " />
 
         <TextView
-            android:id="@+id/textView5"
+            android:id="@+id/tv_sum"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center_vertical"
             android:layout_marginEnd="20dp"
             android:textSize="20sp"
             android:textStyle="bold"
-            android:text="TextView" />
+            android:text="" />
 
         <Button
-            android:id="@+id/button3"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:id="@+id/payment"
+            android:layout_width="100dp"
+            android:layout_height="70dp"
             android:layout_weight="1"
             android:text=" 결제하기 " />
     </LinearLayout>
