--- a/app/src/main/res/layout-w600dp/fragment_transform.xml
+++ b/app/src/main/res/layout-w600dp/fragment_transform.xml
@@ -12,6 +12,8 @@
         android:id="@+id/recyclerview_transform"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+        app:spanCount="4"
         app:layout_constraintTop_toTopOf="parent"
         />
 
@@ -33,23 +35,31 @@
             android:layout_marginStart="20dp"
             android:src="@drawable/buy" />
 
-        <ScrollView
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/cart_item_recyclerview"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            app:reverseLayout = "false"
+            app:stackFromEnd="true"/>
+<!--        <ScrollView
             android:id="@+id/scrollview1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="30dp">
 
-<!--            <LinearLayout
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                app:layout_constraintBottom_toTopOf="@+id/summary">-->
+                app:layout_constraintBottom_toTopOf="@+id/summary">
 
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/cart_item_recyclerview"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
-        </ScrollView>
+                    android:layout_height="wrap_content"
+                    app:stackFromEnd="true"/>
+        </ScrollView>-->
     </androidx.cardview.widget.CardView>
 
     <LinearLayout
