서버 폴링 추가

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,6 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="nice">#1F0D76</color>
-    <color name="nice_100">#C5B3EF</color>
+    <color name="nice_100">#FFCCFF</color>
 
 </resources>
