--- a/app/src/main/res/layout/fragment_sales.xml
+++ b/app/src/main/res/layout/fragment_sales.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.reflow.ReflowFragment">
+    tools:context=".ui.reflow.SalesAnalysisFragment">
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
