--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -13,15 +13,15 @@
 
     <fragment
         android:id="@+id/nav_reflow"
-        android:name="com.mpas.mpas_kiosk.ui.reflow.ReflowFragment"
+        android:name="com.mpas.mpas_kiosk.ui.reflow.SalesAnalysisFragment"
         android:label="@string/menu_reflow"
-        tools:layout="@layout/fragment_reflow" />
+        tools:layout="@layout/fragment_sales" />
 
     <fragment
         android:id="@+id/nav_slideshow"
-        android:name="com.mpas.mpas_kiosk.ui.slideshow.SlideshowFragment"
+        android:name="com.mpas.mpas_kiosk.ui.slideshow.StoreManagementFragment"
         android:label="@string/menu_slideshow"
-        tools:layout="@layout/fragment_slideshow" />
+        tools:layout="@layout/fragment_store" />
 
     <fragment
         android:id="@+id/nav_settings"
